# ocaml-gemini

./: .gitignore  README.md  dune-project  gemini-cli.opam  gemini.opam  ocaml-gemini.opam
.github/workflows/: build.yml
cli/: Makefile  chat.ml  dune  gemini  gemini.ml
src/: dune  gemini.ml  gemini.mli
